Vuelve a definir ip para cada master

--- a/deploy/.env
+++ b/deploy/.env
@@ -2,4 +2,5 @@ IMAGE_NAME=chrislusf/seaweedfs
 IMAGE_TAG=latest
 MASTER_HOST=swfs-master
 MASTER_PORT=9333
+DEFAULT_REPLICATION=002
 FILER_PORT=8888
