Añade servicios para docker-volume-plugin

--- a/deploy/.env
+++ b/deploy/.env
@@ -4,3 +4,5 @@ MASTER_HOST=swfs-master
 MASTER_PORT=9333
 DEFAULT_REPLICATION=002
 FILER_PORT=8888
+DOCKER_PLUGINS_PATH=/var/lib/docker/plugins
+DOCKER_PLUGIN_NAME=swarm
