Simplifica despliegue para probar funcionamiento
Elimina otros servicios para aislar los posibles problemas.

Expone mediante Traefik las interfaces web de cada servicio.

--- a/deploy/.env
+++ b/deploy/.env
@@ -3,6 +3,5 @@ IMAGE_TAG=latest
 MASTER_HOST=swfs-master
 MASTER_PORT=9333
 DEFAULT_REPLICATION=002
+VOLUME_PORT=8080
 FILER_PORT=8888
-DOCKER_PLUGINS_PATH=/var/lib/docker/plugins
-DOCKER_PLUGIN_NAME=swarm
