Aplica correcciones y nuevos ajustes tras probar
Corrige puertos expuestos a través de Traefik y añade middlewares para
autenticación y redirección (necesario para volume).

Sobreescribe punto de entrada a contenedores, permitiendo así el
reemplazo de variables con expresiones que resuelve el servicio Swarm al
lanzar el contenedor. Aplica parámetros por defecto provenientes del
entrypoint original.

Agrega nuevos parámetros, como datacenter o rack. Recupera definición de
puertos.

Aplica hostnames a servicios para facilitar su referencia.

Separa volúmenes nombrando en función del nodo en el que se despliega,
para evitar cruces de datos entre replicas.

Generaliza comando para servicios master, pero mantiene la separación en
3 servicios independientes. Queda pendiente probar a unificar y utilizar
replicas.

--- a/deploy/.env
+++ b/deploy/.env
@@ -1,10 +1,28 @@
 IMAGE_NAME=chrislusf/seaweedfs
 IMAGE_TAG=latest
+
 MASTER_HOST=swfs-master
 MASTER_PORT=9333
 DEFAULT_REPLICATION=002
+
 VOLUME_PORT=8080
+
 FILER_PORT=8888
+FILER_GROUP=filergroup
+
+DATA_PATH=/data
+DATACENTER=datacenter
+RACK=r-{{.Node.ID}}
+VOLUME_IP=swfs-volume-{{.Node.ID}}
+FILER_IP=swfs-filer-{{.Node.ID}}
 
 TRAEFIK_ENTRYPOINT=http
 PUBLIC_HOSTNAME=change.me
+
+MASTER_TRAEFIK_SUBDOMAIN=swfs-master
+VOLUME_TRAEFIK_SUBDOMAIN=swfs-volume
+FILER_TRAEFIK_SUBDOMAIN=swfs-filer
+
+MASTER_TRAEFIK_AUTH=user:$apr1$md5password
+VOLUME_TRAEFIK_AUTH=user:$apr1$md5password
+FILER_TRAEFIK_AUTH=user:$apr1$md5password
