Aisla parámetros anidados en comandos

--- a/deploy/docker-compose.tmpl.yml
+++ b/deploy/docker-compose.tmpl.yml
@@ -5,7 +5,7 @@ x-swfs-master:
   image: ${IMAGE_NAME}:${IMAGE_TAG}
   entrypoint: /bin/sh
   command: >
-    -c "weed -logtostderr=true master
+    -c "weed -logtostderr=true master \"
       -mdir=${DATA_PATH}
       -volumePreallocate
       -volumeSizeLimitMB=1024
@@ -13,7 +13,7 @@ x-swfs-master:
       -ip=$${MASTER_IP}
       -ip.bind=0.0.0.0
       -port=${MASTER_PORT}
-      -peers=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}"
+      -peers=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}\""
   networks:
     seaweedfs-net:
     traefik-net:
@@ -69,7 +69,7 @@ services:
     image: ${IMAGE_NAME}:${IMAGE_TAG}
     entrypoint: /bin/sh
     command: >
-      -c "weed -logtostderr=true volume
+      -c "weed -logtostderr=true volume \"
         -dir=${DATA_PATH}
         -max=0
         -dataCenter=$${VOLUME_DATACENTER}
@@ -78,7 +78,7 @@ services:
         -ip.bind=0.0.0.0
         -port=${VOLUME_PORT}
         -publicUrl=${VOLUME_TRAEFIK_SUBDOMAIN}.${PUBLIC_HOSTNAME}
-        -mserver=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}"
+        -mserver=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}\""
     hostname: ${VOLUME_IP}
     environment:
       VOLUME_IP:
@@ -119,14 +119,14 @@ services:
     image: ${IMAGE_NAME}:${IMAGE_TAG}
     entrypoint: /bin/sh
     command: >
-      -c "weed -logtostderr=true filer
+      -c "weed -logtostderr=true filer \"
         -dataCenter=$${FILER_PREFERED_DATACENTER}
         -rack=$${FILER_PREFERED_RACK}
         -filerGroup ${FILER_GROUP}
         -ip=$${FILER_IP}
         -ip.bind=0.0.0.0
         -port=${FILER_PORT}
-        -master=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}"
+        -master=${MASTER_HOST}-1:${MASTER_PORT},${MASTER_HOST}-2:${MASTER_PORT},${MASTER_HOST}-3:${MASTER_PORT}\""
     hostname: ${FILER_IP}
     environment:
       FILER_IP:
